# optimates

./: .flake8  .gitignore  TODO.md  pyproject.toml  ruff.toml  test.py
optimates/: combinatorics.py  search.py  utils.py
