[tool.poetry]
name = "optimates"
version = "0.1.0"
description = "A library for discrete optimization and search."
authors = ["Jeremy Silver <jeremys@nessiness.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
