[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optimates"
dynamic = ["version"]
description = "A library for discrete optimization and search."
authors = [
    { name = "Jeremy Silver", email = "jeremys@nessiness.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["optimization", "optimisation", "search"]
classifiers = [
  "Programming Language :: Python"
]

[tool.commitizen]
tag_format = "v$major.$minor.$patch"

[tool.mypy]
exclude = ["old/", "tmp.*"]
warn_unused_configs = true
strict = true

[[tool.mypy.overrides]]
module = "test"
strict = false
disable_error_code = ["no-untyped-call", "no-untyped-def"]
